frontend/test/should_pass/induced_002.grg
induced rule r {
	x: Node -:Edge-> y:Node;

	replace {
	}
}

