frontend/test/should_fail/dangle_013.grg
test r {
    y -a:Edge-> x:Node;
    y:Node -a-> x;
}
